# twedit

./: .gitignore  CLAUDE.md  Cargo.toml  build_release.ps1  windows-rs.patch
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  automerge.yml  ci.yml  release.yml  update-prs.yml
docs/: FORMAT.md  scan_report.md
esf-parser/: Cargo.toml  parse_log.txt
esf-parser/src/: campaign.rs  descriptions.rs  enums.rs  lib.rs  objects.rs  pack_parser.rs  parser.rs
reactor_patches/: app.rs  app_shim.rs  bindings.rs  host.rs
twedit-slint/: Cargo.toml  build.rs
twedit-slint/src/: main.rs
twedit-slint/ui/: app.slint  theme.slint
twedit-ui/: Cargo.toml  app.rc  build.rs
twedit-ui/assets/: NodesDescriptions.xml  esf_schema.toml
twedit-ui/src/: campaign.rs  descriptions.rs  main.rs  theme.rs
twedit-ui/wix/: License.rtf  main.wxs
