[package]
name = "twedit-slint"
version = "0.1.0"
edition = "2021"
description = "Slint front-end for the twedit Total War save editor"
license = "GPL-3.0-or-later"

[dependencies]
slint = { version = "1.17", features = ["backend-winit"] }
i-slint-backend-winit = "1.17"
esf-parser = { path = "../esf-parser" }
rfd = "0.15"

[build-dependencies]
slint-build = "1.17"
