[package]
name = "twedit-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-reactor = { path = "../../_lib/windows-rs/crates/libs/reactor" }
windows-core = { path = "../../_lib/windows-rs/crates/libs/core" }
esf-parser = { path = "../esf-parser" }
rfd = "0.15"
quick-xml = "0.37"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
anyhow = "1.0.103"
log = "0.4.33"

[build-dependencies]
embed-resource = "3.0.11"
windows-reactor-setup = { path = "../../_lib/windows-rs/crates/libs/reactor-setup" }
